--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "weather-cli",
   "version": "1.0.0",
   "description": "CLI for getting weather forecast",
-  "main": "index.js",
+  "main": "weather.js",
+  "bin": {
+    "weather": "weather.js"
+  },
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "node weather.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -12,5 +16,10 @@
     "weather"
   ],
   "author": "Alexander Machuslky",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.24.0",
+    "chalk": "^5.0.0",
+    "dedent-js": "^1.0.1"
+  }
 }
